Mod: change from png to svg

--- a/public/play.html
+++ b/public/play.html
@@ -179,7 +179,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col">
-                <img class="img-fluid" src="/images/card_back.png" alt="">
+                <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#back" x="0" y="0" fill="red" /></svg>
               </div>
               <div class="col">
                 <div class="row mb-3">
