Mod: add empty card-base

--- a/public/play.html
+++ b/public/play.html
@@ -26,7 +26,20 @@
         <div class="col-3">Player:</div>
         <div id="playerLabel" class="col-9"></div>
       </div>
-      <div id="hand" class="row mb-3"></div>
+      <div id="hand" class="row mb-3">
+        <div class="col">
+          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+        </div>
+        <div class="col">
+          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+        </div>
+        <div class="col">
+          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+        </div>
+        <div class="col">
+          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+        </div>
+      </div>
       <h2>Table</h2>
       <div class="row">
         <div class="col-3">Deck:</div>
@@ -35,9 +48,13 @@
         <div id="pileLabel" class="col-3"></div>
       </div>
       <div class="row mb-3">
-        <div id="deck" class="col-3"></div>
+        <div id="deck" class="col-3">
+          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+        </div>
         <div class="col-3"></div>
-        <div id="pile" class="col-3"></div>
+        <div id="pile" class="col-3">
+          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+        </div>
         <div class="col-3"></div>
       </div>
       <h2>Players</h2>
@@ -138,7 +155,9 @@
         <div class="modal-body">
           <div class="container-fluid">
             <div class="row">
-              <div id="handModalCard" class="col"></div>
+              <div id="handModalCard" class="col">
+                <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+              </div>
               <div class="col">
                 <div class="row mb-3">
                   <div class="col">
@@ -215,7 +234,9 @@
         <div class="modal-body">
           <div class="container-fluid">
             <div class="row">
-              <div id="pileModalCard" class="col"></div>
+              <div id="pileModalCard" class="col">
+                <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#back" x="0" y="0" fill="red" /></svg>
+              </div>
               <div class="col">
                 <div class="row mb-3">
                   <div class="col">
