--- a/public/admin.html
+++ b/public/admin.html
@@ -21,10 +21,7 @@
         <div class="col-3">Game</div>
         <div class="col-9">Players</div>
       </div>
-      <div id="game" class="row mb-3">
-        <div class="col-3">id</div>
-        <div class="col-9">players</div>
-      </div>
+      <div id="game" class="row mb-3"></div>
       <div class="row mb-3">
         <div class="col-4">
           <button id="newGame" class="btn btn-primary" type="button">New game</button>
