--- a/public/play.html
+++ b/public/play.html
@@ -28,16 +28,16 @@
       </div>
       <div id="hand" class="row mb-3">
         <div class="col">
-          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="./images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
         </div>
         <div class="col">
-          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="./images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
         </div>
         <div class="col">
-          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="./images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
         </div>
         <div class="col">
-          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="./images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
         </div>
       </div>
       <h2>Table</h2>
@@ -49,11 +49,11 @@
       </div>
       <div class="row mb-3">
         <div id="deck" class="col-3">
-          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="./images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
         </div>
         <div class="col-3"></div>
         <div id="pile" class="col-3">
-          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+          <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="./images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
         </div>
         <div class="col-3"></div>
       </div>
@@ -156,7 +156,7 @@
           <div class="container-fluid">
             <div class="row">
               <div id="handModalCard" class="col">
-                <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
+                <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="./images/svg-cards.svg#card-base" x="0" y="0" fill="red" /></svg>
               </div>
               <div class="col">
                 <div class="row mb-3">
@@ -198,7 +198,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col">
-                <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#back" x="0" y="0" fill="red" /></svg>
+                <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="./images/svg-cards.svg#back" x="0" y="0" fill="red" /></svg>
               </div>
               <div class="col">
                 <div class="row mb-3">
@@ -235,7 +235,7 @@
           <div class="container-fluid">
             <div class="row">
               <div id="pileModalCard" class="col">
-                <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="/images/svg-cards.svg#back" x="0" y="0" fill="red" /></svg>
+                <svg viewBox="0 0 169 245" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" ><use href="./images/svg-cards.svg#back" x="0" y="0" fill="red" /></svg>
               </div>
               <div class="col">
                 <div class="row mb-3">
@@ -269,6 +269,6 @@
   <!-- Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="/js/play.js" type="module"></script>
+  <script src="./js/play.js" type="module"></script>
 </body>
 </html>
