--- a/public/play.html
+++ b/public/play.html
@@ -27,7 +27,7 @@
         <div class="col-3"></div>
         <div class="col-3"></div>
         <div id="tarot" class="col-3">
-			<img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.png">
+          <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.png">
         </div>
         <div class="col-3"></div>
       <h2>Hand</h2>
@@ -285,13 +285,18 @@
         <div class="modal-body">
           <div class="container-fluid">
             <div class="row">
-              <div class="col">
-				<img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.png">
+              <div id="tarotModalCard" class="col">
+                <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.png">
               </div>
               <div class="col">
                 <div class="row mb-3">
                   <div class="col">
                     <button id="drawTarot" type="button" class="btn btn-primary">Draw</button>
+                  </div>
+                </div>
+                <div class="row mb-3">
+                  <div class="col">
+                    <button id="flipTarot" type="button" class="btn btn-primary">Flip</button>
                   </div>
                 </div>
                 <div class="row mb-3">
