Mod: new feature: trump tarot.

--- a/public/admin.html
+++ b/public/admin.html
@@ -30,19 +30,31 @@
           <label for="players" class="form-label">Players</label>
             <div id="players" class="input-group mb-3">
               <input name="players[]" class="form-control" type="text" placeholder="PC" value="DEIRmen">
+              <select name="trumps[]" class="form-select">
+                <option value="99" selected>Select trump</option>
+              </select>
 			  <button class="btn btn-success add" type="button"><i class="bi-plus"></i></button>
             </div>
             <div class="input-group mb-3">
               <input name="players[]" class="form-control" placeholder="PC" value="Litzia">
+              <select name="trumps[]" class="form-select">
+                <option value="99" selected>Select trump</option>
+              </select>
 			  <button class="btn btn-danger remove" type="button"><i class="bi-dash"></i></button>
             </div>
             <div class="input-group mb-3">
               <input name="players[]" class="form-control" placeholder="PC" value="yuzuki">
+              <select name="trumps[]" class="form-select">
+                <option value="99" selected>Select trump</option>
+              </select>
 			  <button class="btn btn-danger remove" type="button"><i class="bi-dash"></i></button>
             </div>
           <div class="copy d-none">
             <div class="input-group mb-3">
               <input name="players[]" class="form-control" placeholder="PC">
+              <select name="trumps[]" class="form-select">
+                <option value="99" selected>Select trump</option>
+              </select>
 			  <button class="btn btn-danger remove" type="button"><i class="bi-dash"></i></button>
             </div>
           </div>
