Mod: use webp instead of png.

--- a/public/play.html
+++ b/public/play.html
@@ -25,11 +25,11 @@
       </div>
       <div class="row mb-3">
         <div id="trump" class="col-3">
-          <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.png">
+          <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.webp">
         </div>
         <div class="col-3"></div>
         <div id="tarot" class="col-3">
-          <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.png">
+          <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.webp">
         </div>
         <div class="col-3"></div>
       <h2>Hand</h2>
@@ -288,7 +288,7 @@
           <div class="container-fluid">
             <div class="row">
               <div id="trumpModalCard" class="col">
-                <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.png">
+                <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.webp">
               </div>
               <div class="col">
                 <div class="row mb-3">
@@ -320,14 +320,9 @@
           <div class="container-fluid">
             <div class="row">
               <div id="tarotModalCard" class="col">
-                <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.png">
+                <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.webp">
               </div>
               <div class="col">
-                <div class="row mb-3">
-                  <div class="col">
-                    <button id="drawTarot" type="button" class="btn btn-primary">Draw</button>
-                  </div>
-                </div>
                 <div class="row mb-3">
                   <div class="col">
                     <button id="flipTarot" type="button" class="btn btn-primary">Flip</button>
