Mod: major refactoring for tarot.

--- a/public/play.html
+++ b/public/play.html
@@ -19,19 +19,25 @@
       <h2>Game</h2>
       <div class="row">
         <div class="col-3">Game:</div>
-        <div id="gameLabel" class="col-3"></div>
-        <div class="col-3">Tarot:</div>
-        <div id="tarotLabel" class="col-3"></div>
+        <div id="gameLabel" class="col-9"></div>
+      </div>
+      <h2>Tarot</h2>
+      <div class="row">
+        <div class="col-3">Hand:</div>
+        <div id="tarotHandLabel" class="col-3"></div>
+        <div class="col-3">Pile:</div>
+        <div id="tarotPileLabel" class="col-3"></div>
       </div>
       <div class="row mb-3">
-        <div id="trump" class="col-3">
+        <div id="tarotHand" class="col-3">
           <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.webp">
         </div>
         <div class="col-3"></div>
-        <div id="tarot" class="col-3">
+        <div id="tarotPile" class="col-3">
           <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.webp">
         </div>
         <div class="col-3"></div>
+      </div>
       <h2>Hand</h2>
       <div class="row">
         <div class="col-3">Player:</div>
@@ -277,23 +283,23 @@
     </div>
   </div>
 
-  <!-- Modal: trump -->
-  <div class="modal fade" id="trumpModal" tabindex="-1" role="dialog">
+  <!-- Modal: tarotHand -->
+  <div class="modal fade" id="tarotHandModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5>Trump</h5>
+          <h5>TarotHand</h5>
         </div>
         <div class="modal-body">
           <div class="container-fluid">
             <div class="row">
-              <div id="trumpModalCard" class="col">
+              <div id="tarotHandModalCard" class="col">
                 <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.webp">
               </div>
               <div class="col">
                 <div class="row mb-3">
                   <div class="col">
-                    <button id="discardTrump" type="button" class="btn btn-primary">Discard</button>
+                    <button id="discardTarotHand" type="button" class="btn btn-primary">Discard</button>
                   </div>
                 </div>
                 <div class="row mb-3">
@@ -309,23 +315,23 @@
     </div>
   </div>
 
-  <!-- Modal: tarot -->
-  <div class="modal fade" id="tarotModal" tabindex="-1" role="dialog">
+  <!-- Modal: tarotPile -->
+  <div class="modal fade" id="tarotPileModal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5>Tarot</h5>
+          <h5>TarotPile</h5>
         </div>
         <div class="modal-body">
           <div class="container-fluid">
             <div class="row">
-              <div id="tarotModalCard" class="col">
+              <div id="tarotPileModalCard" class="col">
                 <img style="max-width: 100%; height: auto;" src="./images/TNM_tarot/99.webp">
               </div>
               <div class="col">
                 <div class="row mb-3">
                   <div class="col">
-                    <button id="flipTarot" type="button" class="btn btn-primary">Flip</button>
+                    <button id="flipTarotPile" type="button" class="btn btn-primary">Flip</button>
                   </div>
                 </div>
                 <div class="row mb-3">
